# Choreonoid_mapping

./: README.md  aizu_wheel_mapping.cnoid
merger/: concat.py  view_pcd.py
models/AizuWheel/: AizuWheel.body  box.body
src/: CMakeLists.txt  kinect_data_recorder.cpp  vlp_data_recorder.cpp  wheel_controller.cpp
